A bunch of changes

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -80,11 +80,11 @@ fading = true
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
-fade-in-step = 0.12
+fade-in-step = 0.15
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03
-fade-out-step = 0.12
+fade-out-step = 0.15
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
 # fade-delta = 10
@@ -161,7 +161,7 @@ focus-exclude = [
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 0
+corner-radius = 8
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
@@ -187,7 +187,7 @@ rounded-corners-exclude = [
 # Bad in performance, with driver-dependent behavior.
 # The name of the switch may change without prior notifications.
 #
-#blur-background = false
+#blur-background = true
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
