--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -304,6 +304,7 @@ rules: (
           "class_g = 'MEGAsync'    || "
           "class_g = 'Conky'       || "
           "class_g = 'conky'       || "
+          "class_g = 'slop'        || "
           "_GTK_FRAME_EXTENTS@";
   blur-background = false;
 }, {
