--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -7,7 +7,8 @@ show_always = true
 
 # Replace the "❯" symbol in the prompt with "➜"
 [character]                            # The name of the module we are configuring is "character"
-success_symbol = "[➜](bold cyan) "     # The "success_symbol" segment is being set to "➜" with the color "bold green"
+success_symbol = "[❯](bold cyan) "     # The "success_symbol" segment is being set to "➜" with the color "bold green"
+#success_symbol = "[➜](bold cyan) "     # The "success_symbol" segment is being set to "➜" with the color "bold green"
 error_symbol = "[✗](bold red) "
 
 # configure directory
