--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -10,6 +10,8 @@ bind-key v split-window -v
 set -g prefix C-s
 set -g mouse on
 setw -g mode-keys vi
+set -g base-index 1
+set -g renumber-windows on
 
 bind-key h select-pane -L
 bind-key j select-pane -D
@@ -22,6 +24,7 @@ set -g status-right ''
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'bjesus/muxile'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
