--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -13,10 +13,11 @@ setw -g mode-keys vi
 set -g base-index 1
 set -g renumber-windows on
 
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+# Use Alt + h,j,k,l keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
 
 set -g status-bg "cyan" 
 set -g status-right ''
@@ -25,6 +26,7 @@ set -g status-right ''
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'bjesus/muxile'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
