--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -19,8 +19,9 @@ bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
 
-set -g status-bg "cyan" 
-set -g status-right ''
+set -g status-position top
+set -g status-style fg=cyan,bg=default
+set -g status-right ""
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
