feat: improved my setup

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -313,6 +313,8 @@ rules: (
 }, {
   match = "window_type = 'dock' || "
           "window_type = 'desktop' || "
+          "window_type = 'popup_menu' || "
+          "window_type = 'dialog' || "
           "class_g = 'Conky'    || "
           "class_g = 'conky'    || "
           "class_g = 'Dunst'    || "
