feat: improved my tmux config

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,17 +1,22 @@
 unbind r
 bind r source-file $XDG_CONFIG_HOME/tmux/tmux.conf
 
-# split panes using | and -
+# split panes using h and v
 unbind '"'
 unbind %
-bind-key | split-window -h
+bind-key h split-window -h
 bind-key v split-window -v
 
 set -g prefix C-s
+set -g prefix2 C-j
 set -g mouse on
 setw -g mode-keys vi
 set -g base-index 1
+set-window-option -g pane-base-index 1
 set -g renumber-windows on
+
+# No delay for escape key press
+set -sg escape-time 0
 
 # Use Alt + h,j,k,l keys without prefix key to switch panes
 bind -n M-h select-pane -L
@@ -19,16 +24,24 @@ bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
 
+set -g status-justify centre
 set -g status-position top
 set -g status-style fg=cyan,bg=default
 set -g status-right ""
+
+set-option -g message-style bg=red,fg=black
+
+# Setup vi-style copy/paste
+bind P paste-buffer 
+bind-key -T copy-mode-vi v send-keys -X begin-selection 
+bind-key -T copy-mode-vi y send-keys -X copy-selection 
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'bjesus/muxile'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm'
