--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,5 +1,4 @@
-set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 unbind r
 bind r source-file $XDG_CONFIG_HOME/tmux/tmux.conf
