--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -17,6 +17,9 @@ set -g base-index 1
 set-window-option -g pane-base-index 1
 set -g renumber-windows on
 
+bind-key & kill-window
+bind-key x kill-pane
+
 # No delay for escape key press
 set -sg escape-time 0
 
