--- a/yazi/.config/yazi/package.toml
+++ b/yazi/.config/yazi/package.toml
@@ -1,5 +1,5 @@
 [plugin]
-deps = [{ use = "yazi-rs/plugins:smart-enter", rev = "600614a" }, { use = "yazi-rs/plugins:full-border", rev = "600614a" }]
+deps = [{ use = "yazi-rs/plugins:smart-enter", rev = "600614a" }, { use = "yazi-rs/plugins:full-border", rev = "600614a" }, { use = "Rolv-Apneseth/starship", rev = "af8bf6f" }]
 
 [flavor]
 deps = []
