--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -42,11 +42,19 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection 
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
+set -g @floax-bind '-n M-p'
+set -g @floax-title ' YOUR COMMAND, SIR '
+set -g @floax-width '65%'
+set -g @floax-height '50%'
+set -g @floax-border-color 'red'
+set -g @floax-text-color 'red'
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'omerxx/tmux-floax'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm'
