feat: install vim-tmux-navigator plugin

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -10,7 +10,7 @@ bind-key h split-window -h
 bind-key v split-window -v
 
 set -g prefix C-s
-set -g prefix2 C-j
+set -g prefix2 C-w
 set -g mouse on
 setw -g mode-keys vi
 set -g base-index 1
@@ -42,6 +42,8 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection 
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
+bind C-l send-keys 'C-l'
+
 set -g @floax-bind '-n M-p'
 set -g @floax-title ' YOUR COMMAND, SIR '
 set -g @floax-width '65%'
@@ -55,6 +57,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'omerxx/tmux-floax'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm'
