--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -10,7 +10,7 @@ bind-key h split-window -h
 bind-key v split-window -v
 
 set -g prefix C-s
-set -g prefix2 C-w
+set -g prefix2 C-b
 set -g mouse on
 setw -g mode-keys vi
 set -g base-index 1
@@ -23,11 +23,11 @@ bind-key x kill-pane
 # No delay for escape key press
 set -sg escape-time 0
 
-# Use Alt + h,j,k,l keys without prefix key to switch panes
-bind -n M-h select-pane -L
-bind -n M-l select-pane -R
-bind -n M-k select-pane -U
-bind -n M-j select-pane -D
+# # Use Alt + h,j,k,l keys without prefix key to switch panes
+# bind -n M-h select-pane -L
+# bind -n M-l select-pane -R
+# bind -n M-k select-pane -U
+# bind -n M-j select-pane -D
 
 set -g status-justify centre
 set -g status-position top
@@ -42,7 +42,7 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection 
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
-bind C-l send-keys 'C-l'
+bind -n M-l send-keys 'C-l'
 
 set -g @floax-bind '-n M-p'
 set -g @floax-title ' YOUR COMMAND, SIR '
