chore: modify the tmux config

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -10,7 +10,7 @@ bind-key h split-window -h
 bind-key v split-window -v
 
 set -g prefix C-s
-set -g prefix2 C-b
+set -g prefix2 C-Space
 set -g mouse on
 setw -g mode-keys vi
 set -g base-index 1
@@ -35,6 +35,13 @@ set -g status-style fg=cyan,bg=default
 set -g status-right ""
 
 set-option -g message-style bg=red,fg=black
+
+default_fg="#D8DEE9" 
+active_window_fg="#61afef"
+
+set -g window-status-current-format "#[fg=${active_window_fg},bg=default]  #I:#W"
+set -g window-status-format "#[fg=${default_fg},bg=default] #I:#W"
+set -g window-status-last-style "fg=${default_fg},bg=default"
 
 # Setup vi-style copy/paste
 bind P paste-buffer 
