--- a/yazi/.config/yazi/keymap.toml
+++ b/yazi/.config/yazi/keymap.toml
@@ -156,15 +156,21 @@ keymap = [
 	{ on = "<F1>", run = "help", desc = "Open help" },
 ]
 
+# [[manager.prepend_keymap]]
+# on  = "M"
+# run = "plugin mount"
 prepend_keymap = [
 	# Operation
 	{ on = "<Enter>",	run = "plugin smart-enter",   desc = "Enter the child directory, or open the file" },
+	{ on = "M",	run = "plugin mount", desc = "Mount.yazi" },
 ]
+
 append_keymap = [
 	# Goto
 	{ on = [ "g", "t" ],	run = "cd ~/.local/share/Trash/files", desc = "Go to the Trash directory" },
 	{ on = [ "g", "r" ],	run = "cd /run/media", desc = "Go to /run/media" },
 ]
+
 
 [tasks]
 
