--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -24,10 +24,10 @@ bind-key x kill-pane
 set -sg escape-time 0
 
 # # Use Alt + h,j,k,l keys without prefix key to switch panes
-# bind -n M-h select-pane -L
-# bind -n M-l select-pane -R
-# bind -n M-k select-pane -U
-# bind -n M-j select-pane -D
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
 
 set -g status-justify centre
 set -g status-position top
@@ -49,8 +49,6 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection 
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
-bind -n M-l send-keys 'C-l'
-
 set -g @floax-bind '-n M-p'
 set -g @floax-title ' YOUR COMMAND, SIR '
 set -g @floax-width '65%'
@@ -64,7 +62,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'omerxx/tmux-floax'
-set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm'
