--- a/dmscripts/.config/dmscripts/config
+++ b/dmscripts/.config/dmscripts/config
@@ -12,28 +12,23 @@
 # These are needed as we use prompts in the scripts.
 DMENU="dmenu -b -l 20 -p"
 RMENU="rofi -dmenu -p"
-
-# the bind must stay, why is this not the default? idk
 FMENU="fzf --bind=enter:replace-query+print-query --border=rounded --margin=5% --color=dark --height 100% --reverse --header=$(basename "$0") --info=hidden --header-first --prompt"
 
 
+## DEFAULT PROGRAMS
 PDF_VIEWER="zathura"
-
 DMBROWSER="brave"
-
 DMTERM="alacritty -e"
-
 DMEDITOR="nvim"
+# DMEDITOR="${DMTERM} vim"
+DMLOCKER='slock'
 
-# TODO: Rename this variable to something more traditional
-logout_locker='slock'
-
-# dmscripts will notify you if your configuration is outdated, to shut it up uncomment this.
-# comment it back out if you want dmscripts to nag at you 
+# dmscripts will notify you if your configuration is outdated.
+# To shut it up uncomment this line.
 # DM_SHUTUP="something" # NOTICE: This is currently experimental and will not work in (most) programs
 
-# set this variable up to a real file if you want dmscripts to provide a log of when and what has changed
-# in your config (this can be an alternative to the notifications)
+# Set this variable up to a real file if you want dmscripts to provide a log of when
+# and what has changed in your config (this can be an alternative to notifications)
 DM_CONFIG_DIFF_LOGFILE="/dev/stderr" # NOTICE: experimental
 
 # This case statement lets you change what the DMENU variable is for different scripts, so if you
@@ -69,7 +64,8 @@ bookman_show_source=1
 sounds_dir="${HOME}/.config/dmscripts/dmsounds"
 
 # dm-setbg
-setbg_dir="${HOME}/Pictures/Wallpapers"
+setbg_dir="/usr/share/backgrounds/dtos-backgrounds"
+# setbg_dir="${HOME}/Pictures/Wallpapers"
 # Set this to 1 if you want to use imv and wayland, 0 if you want to use sxiv
 # Note that sxiv is X11 only, you need to mark the image you want to use.
 use_imv=0 
@@ -81,82 +77,6 @@ maim_file_prefix="maim"
 # dm-note
 note_dir="${HOME}/.config/dmscripts/dmnote"
 
-# dm-confedit
-# no means it will use only static entries 
-confedit_isdynamic="yes"
-
-# a list of directories to exclude in conf edit
-# as an example: to exclude anything from the folder .config/foo and .config/bar, put "foo|bar"
-# It takes any regexp and is case insensitive
-confedit_exclude_dirs="BraveSoftware"
-
-
-# If this variable is blank or is defined as "find", then it uses find
-# Examples:
-# locate: locate
-# fd: fd .
-# find: find
-# etc
-# Note that there is no need to include any arguments excluding directories, that is handled autmatically
-confedit_find_prog="find"
-
-# We must declare all lists with the -g option
-
-# a list of static config files that may not be in the expected places
-declare -Ag confedit_list
-confedit_list[confedit]="$HOME/.config/dmscripts/config"
-confedit_list[alacritty]="$HOME/.config/alacritty/alacritty.yml"
-confedit_list[awesome]="$HOME/.config/awesome/rc.lua"
-confedit_list[bash]="$HOME/.bashrc"
-confedit_list[broot]="$HOME/.config/broot/conf.toml"
-confedit_list[bspwm]="$HOME/.config/bspwm/bspwmrc"
-confedit_list[doom emacs config.el]="$HOME/.config/doom/config.el"
-confedit_list[doom emacs config.org]="$HOME/.config/doom/config.org"
-confedit_list[doom emacs init.el]="$HOME/.config/doom/init.el"
-confedit_list[doom emacs packages.el]="$HOME/.config/doom/packages.el"
-confedit_list[dunst]="$HOME/.config/dunst/dunstrc"
-confedit_list[dwm]="$HOME/dwm-distrotube/config.def.h"
-confedit_list[dwmblocks]="$HOME/dwmblocks-distrotube/blocks.def.h"
-confedit_list[fish]="$HOME/.config/fish/config.fish"
-confedit_list[herbstluftwm]="$HOME/.config/herbstluftwm/autostart"
-confedit_list[i3]="$HOME/.config/i3/config"
-confedit_list[ncmpcpp]="$HOME/.config/ncmpcpp/config"
-confedit_list[neovim init.vim]="$HOME/.config/nvim/init.vim"
-confedit_list[neovim init.lua]="$HOME/.config/nvim/init.lua"
-confedit_list[picom]="$HOME/.config/picom/picom.conf"
-confedit_list[polybar]="$HOME/.config/polybar/config"
-confedit_list[qtile]="$HOME/.config/qtile/config.py"
-confedit_list[qutebrowser bookmarks]="$HOME/.config/qutebrowser/bookmarks/urls"
-confedit_list[qutebrowser quickmarks]="$HOME/.config/qutebrowser/quickmarks"
-confedit_list[qutebrowser config.py]="$HOME/.config/qutebrowser/config.py"
-confedit_list[spectrwm]="$HOME/.spectrwm.conf"
-confedit_list[ssh]="$HOME/.ssh/config"
-confedit_list[st]="$HOME/st-distrotube/config.def.h"
-confedit_list[stumpwm]="$HOME/.config/stumpwm/config"
-confedit_list[surf]="$HOME/surf-distrotube/config.def.h"
-confedit_list[sxhkd]="$HOME/.config/sxhkd/sxhkdrc"
-confedit_list[tabbed]="$HOME/tabbed-distrotube/config.def.h"
-confedit_list[vifm]="$HOME/.config/vifm/vifmrc"
-confedit_list[vim]="$HOME/.vimrc"
-confedit_list[xmonad]="$HOME/.xmonad/README.org"
-confedit_list[xinitrc]="$HOME/.xinitrc"
-confedit_list[xresources]="$HOME/.Xresources"
-confedit_list[zsh]="$HOME/.zshrc"
-
-# dm-reddit config
-declare -ag reddit_list=(
-"r/archlinux"
-"r/bash"
-"r/commandline"
-"r/linux"
-"r/linux4noobs"
-"r/linuxmasterrace"
-"r/linuxquestions"
-"r/suckless"
-"r/Ubuntu"
-"r/unixporn"
-"r/vim"
-)
 
 # Search engine config 
 declare -Ag websearch
@@ -164,22 +84,27 @@ declare -Ag websearch
 # websearch[name]="https://www.example.com/search?q="
 
 # Search Engines
+websearch[brave]="https://search.brave.com/search?q="
 websearch[duckduckgo]="https://duckduckgo.com/?q="
 websearch[google]="https://www.google.com/search?q="
 # Information/News
+websearch[bbcnews]="https://www.bbc.co.uk/search?q="
+websearch[cnn]="https://www.cnn.com/search?q="
+websearch[googlenews]="https://news.google.com/search?q="
 websearch[wikipedia]="https://en.wikipedia.org/w/index.php?search="
 # Social Media
+websearch[reddit]="https://www.reddit.com/search/?q="
 websearch[youtube]="https://www.youtube.com/results?search_query="
 # Online Shopping
 websearch[amazon]="https://www.amazon.com/s?k="
-websearch[craigslist]="https://www.craigslist.org/search/sss?query="
-websearch[ebay]="https://www.ebay.com/sch/i.html?&_nkw="
 # Linux
 websearch[archaur]="https://aur.archlinux.org/packages/?O=0&K="
 websearch[archpkg]="https://archlinux.org/packages/?sort=&q="
 websearch[archwiki]="https://wiki.archlinux.org/index.php?search="
+websearch[debianpkg]="https://packages.debian.org/search?suite=default&section=all&arch=any&searchon=names&keywords="
 # Development
 websearch[github]="https://github.com/search?q="
+websearch[gitlab]="https://gitlab.com/search?search="
 websearch[stackoverflow]="https://stackoverflow.com/search?q="
 # Etc
 
@@ -243,4 +168,4 @@ weather_locations=""
 # for full details see: https://github.com/chubin/wttr.in
 
 # current revision (do not touch unless you know what you're doing)
-_revision=26
+_revision=27
