feat: Update system configurations, keybindings, and Qtile settings

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -314,12 +314,16 @@ rules: (
   match = "window_type = 'dock' || "
           "window_type = 'desktop' || "
           "window_type = 'popup_menu' || "
+          "window_type = 'dropdown_menu' || "
+          "window_type = 'menu' || "
+          "window_type = 'combo' || "
           "window_type = 'dialog' || "
           "class_g = 'Conky'    || "
           "class_g = 'conky'    || "
           "class_g = 'Dunst'    || "
-	        "class_g = 'Rofi' || "
-	        "class_g = 'dmenu'";
+          "class_g = 'Viewnior'    || "
+          "class_g = 'Rofi' || "
+          "class_g = 'dmenu'";
   corner-radius = 0;
 }, {
   match = "name = 'Notification'   || "
