chore: Remove Nitrogen configurations, update tmux theme colors and floax settings, and revise package dependencies.

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -31,13 +31,13 @@ bind -n M-j select-pane -D
 
 set -g status-justify centre
 set -g status-position top
-set -g status-style fg=cyan,bg=default
+set -g status-style fg=#1CEDFF,bg=default
 set -g status-right ""
 
 set-option -g message-style bg=red,fg=black
 
 default_fg="#D8DEE9" 
-active_window_fg="#61afef"
+active_window_fg="#1CEDFF"
 
 set -g window-status-current-format "#[fg=${active_window_fg},bg=default]  #I:#W"
 set -g window-status-format "#[fg=${default_fg},bg=default] #I:#W"
@@ -58,10 +58,10 @@ set -g @plugin 'omerxx/tmux-floax'
 
 set -g @floax-bind '-n M-p'
 set -g @floax-title ' YOUR COMMAND, SIR '
-set -g @floax-width '65%'
-set -g @floax-height '50%'
-set -g @floax-border-color 'red'
-set -g @floax-text-color 'red'
+# set -g @floax-width '65%'
+# set -g @floax-height '50%'
+set -g @floax-border-color '#1CEDFF'
+set -g @floax-text-color '#1CEDFF'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm'
